crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_inline_span_matching_quoted_native_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..166
  PARAGRAPH@0..79
    INLINE_HTML_SPAN@0..78
      TEXT@0..5 "<span"
      WHITESPACE@5..6 " "
      HTML_ATTRS@6..14
        TEXT@6..9 "id="
        ATTR_ID@9..14 "outer"
      TEXT@14..15 ">"
      SPAN_CONTENT@15..71
        TEXT@15..22 "before "
        INLINE_HTML_SPAN@22..65
          TEXT@22..27 "<span"
          WHITESPACE@27..28 " "
          HTML_ATTRS@28..51
            ATTR_KEY_VALUE@28..42
              ATTR_KEY@28..33 "title"
              TEXT@33..34 "="
              ATTR_VALUE@34..42 "\"<span>\""
            WHITESPACE@42..43 " "
            TEXT@43..46 "id="
            ATTR_ID@46..51 "inner"
          TEXT@51..52 ">"
          SPAN_CONTENT@52..58
            TEXT@52..58 "inside"
          SPAN_BRACKET_CLOSE@58..65 "</span>"
        TEXT@65..71 " after"
      SPAN_BRACKET_CLOSE@71..78 "</span>"
    NEWLINE@78..79 "\n"
  BLANK_LINE@79..80
    BLANK_LINE@79..80 "\n"
  PARAGRAPH@80..166
    INLINE_HTML_SPAN@80..165
      TEXT@80..85 "<span"
      WHITESPACE@85..86 " "
      HTML_ATTRS@86..94
        TEXT@86..89 "id="
        ATTR_ID@89..94 "other"
      TEXT@94..95 ">"
      SPAN_CONTENT@95..158
        TEXT@95..102 "before "
        INLINE_HTML_SPAN@102..152
          TEXT@102..107 "<span"
          WHITESPACE@107..108 " "
          HTML_ATTRS@108..138
            ATTR_KEY_VALUE@108..123
              ATTR_KEY@108..113 "title"
              TEXT@113..114 "="
              ATTR_VALUE@114..123 "\"</span>\""
            WHITESPACE@123..124 " "
            TEXT@124..127 "id="
            ATTR_ID@127..138 "inner-close"
          TEXT@138..139 ">"
          SPAN_CONTENT@139..145
            TEXT@139..145 "inside"
          SPAN_BRACKET_CLOSE@145..152 "</span>"
        TEXT@152..158 " after"
      SPAN_BRACKET_CLOSE@158..165 "</span>"
    NEWLINE@165..166 "\n"
