crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_implicit_figure_promotion.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..293
  FIGURE@0..36
    IMAGE_LINK@0..35
      IMAGE_LINK_START@0..2
        IMAGE_LINK_START@0..2 "!["
      IMAGE_ALT@2..25
        TEXT@2..25 "Alone in its paragraph."
      IMAGE_ALT_END@25..26 "]"
      IMAGE_DEST_START@26..27 "("
      LINK_DEST@27..34
        TEXT@27..34 "img.jpg"
      IMAGE_DEST_END@34..35 ")"
    NEWLINE@35..36 "\n"
  BLANK_LINE@36..37
    BLANK_LINE@36..37 "\n"
  PARAGRAPH@37..92
    IMAGE_LINK@37..76
      IMAGE_LINK_START@37..39
        IMAGE_LINK_START@37..39 "!["
      IMAGE_ALT@39..66
        TEXT@39..66 "Demoted by a trailing ..."
      IMAGE_ALT_END@66..67 "]"
      IMAGE_DEST_START@67..68 "("
      LINK_DEST@68..75
        TEXT@68..75 "img.jpg"
      IMAGE_DEST_END@75..76 ")"
    NEWLINE@76..77 "\n"
    TEXT@77..91 "trailing prose"
    NEWLINE@91..92 "\n"
  BLANK_LINE@92..93
    BLANK_LINE@92..93 "\n"
  PARAGRAPH@93..146
    TEXT@93..106 "leading prose"
    NEWLINE@106..107 "\n"
    IMAGE_LINK@107..145
      IMAGE_LINK_START@107..109
        IMAGE_LINK_START@107..109 "!["
      IMAGE_ALT@109..135
        TEXT@109..135 "Demoted by a leading  ..."
      IMAGE_ALT_END@135..136 "]"
      IMAGE_DEST_START@136..137 "("
      LINK_DEST@137..144
        TEXT@137..144 "img.jpg"
      IMAGE_DEST_END@144..145 ")"
    NEWLINE@145..146 "\n"
  BLANK_LINE@146..147
    BLANK_LINE@146..147 "\n"
  PARAGRAPH@147..196
    IMAGE_LINK@147..186
      IMAGE_LINK_START@147..149
        IMAGE_LINK_START@147..149 "!["
      IMAGE_ALT@149..176
        TEXT@149..176 "Demoted by same-line  ..."
      IMAGE_ALT_END@176..177 "]"
      IMAGE_DEST_START@177..178 "("
      LINK_DEST@178..185
        TEXT@178..185 "img.jpg"
      IMAGE_DEST_END@185..186 ")"
    TEXT@186..195 " and more"
    NEWLINE@195..196 "\n"
  BLANK_LINE@196..197
    BLANK_LINE@196..197 "\n"
  BLOCK_QUOTE@197..232
    BLOCK_QUOTE_MARKER@197..198 ">"
    WHITESPACE@198..199 " "
    FIGURE@199..232
      IMAGE_LINK@199..231
        IMAGE_LINK_START@199..201
          IMAGE_LINK_START@199..201 "!["
        IMAGE_ALT@201..221
          TEXT@201..221 "Inside a blockquote."
        IMAGE_ALT_END@221..222 "]"
        IMAGE_DEST_START@222..223 "("
        LINK_DEST@223..230
          TEXT@223..230 "img.jpg"
        IMAGE_DEST_END@230..231 ")"
      NEWLINE@231..232 "\n"
  BLANK_LINE@232..233
    BLANK_LINE@232..233 "\n"
  BLOCK_QUOTE@233..293
    BLOCK_QUOTE_MARKER@233..234 ">"
    WHITESPACE@234..235 " "
    PARAGRAPH@235..293
      IMAGE_LINK@235..275
        IMAGE_LINK_START@235..237
          IMAGE_LINK_START@235..237 "!["
        IMAGE_ALT@237..265
          TEXT@237..265 "Demoted inside a bloc ..."
        IMAGE_ALT_END@265..266 "]"
        IMAGE_DEST_START@266..267 "("
        LINK_DEST@267..274
          TEXT@267..274 "img.jpg"
        IMAGE_DEST_END@274..275 ")"
      NEWLINE@275..276 "\n"
      BLOCK_QUOTE_MARKER@276..277 ">"
      WHITESPACE@277..278 " "
      TEXT@278..292 "trailing prose"
      NEWLINE@292..293 "\n"
