crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_indented_code_after_fenced_code_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..20
  CODE_BLOCK@0..14
    CODE_FENCE_OPEN@0..8
      CODE_FENCE_MARKER@0..3 "```"
      CODE_INFO@3..7
        CODE_LANGUAGE@3..7 "rust"
      NEWLINE@7..8 "\n"
    CODE_CONTENT@8..10
      TEXT@8..9 "c"
      NEWLINE@9..10 "\n"
    CODE_FENCE_CLOSE@10..14
      CODE_FENCE_MARKER@10..13 "```"
      NEWLINE@13..14 "\n"
  CODE_BLOCK@14..20
    CODE_CONTENT@14..20
      WHITESPACE@14..18 "    "
      TEXT@18..19 "x"
      NEWLINE@19..20 "\n"
